# diskard

./: .agent-relay.json  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  release-please-config.json
.agents/contexts/: disk-usage-visualization.md
.claude/skills/agent-relay/: SKILL.md
.github/workflows/: ci.yml  homebrew.yml  release-please.yml  release.yml
crates/diskard-core/: Cargo.toml
crates/diskard-core/src/: cleaner.rs  config.rs  error.rs  finding.rs  lib.rs  recognizer.rs  scanner.rs  size.rs
crates/diskard-core/src/recognizers/: claude.rs  cocoapods.rs  docker.rs  generic.rs  gradle.rs  homebrew.rs  huggingface.rs  mod.rs  node.rs  ollama.rs  python.rs  rust.rs  vscode.rs  xcode.rs
crates/diskard-tui/: Cargo.toml
crates/diskard-tui/src/: app.rs  event.rs  lib.rs  tui.rs
crates/diskard-tui/src/components/: confirm.rs  drilldown.rs  header.rs  help.rs  mod.rs  results.rs  scan_view.rs
src/: cli.rs  main.rs  output.rs
src/commands/: clean.rs  config.rs  list.rs  mod.rs  scan.rs
tests/: integration.rs
