[workspace]
members = ["crates/diskard-core", "crates/diskard-tui"]
resolver = "2"

[package]
name = "diskard"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "Developer-aware disk cleanup CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/connectwithprakash/diskard"
keywords = ["disk", "cleanup", "developer", "cache", "cli"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "diskard"
path = "src/main.rs"

[dependencies]
diskard-core = { version = "0.1.1", path = "crates/diskard-core" }
diskard-tui = { version = "0.1.1", path = "crates/diskard-tui", optional = true }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
anyhow = "1.0"
console = "0.15"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
toml = "0.8"

[features]
default = []
tui = ["dep:diskard-tui"]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
