[package]
name = "diskard-core"
version = "0.1.2"
edition = "2021"
rust-version = "1.93"
description = "Core library for diskard — developer-aware disk cleanup"
license = "MIT OR Apache-2.0"
repository = "https://github.com/connectwithprakash/diskard"
readme = "../../README.md"

[dependencies]
jwalk = "0.8"
rayon = "1.10"
trash = "5.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
bytesize = "1.3"
dirs = "5.0"
chrono = "0.4"
log = "0.4"

[dev-dependencies]
tempfile = "3.14"
