[package]
name = "diskard-tui"
version = "0.2.0"
edition = "2021"
rust-version = "1.93"
description = "TUI frontend for diskard"
license = "MIT OR Apache-2.0"
repository = "https://github.com/connectwithprakash/diskard"
readme = "../../README.md"

[dependencies]
diskard-core = { version = "0.2.0", path = "../diskard-core" }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
